@@ -1,3 +1,11 @@
+2010-05-27  Andreas Kupries  <andreask@activestate.com>
+
+	* map_slippy.man: [Bug 2999022]: Fixed bogus use of integer
+	* map_slippy.tcl: division in 'tile 2geo'. Thanks to Matt
+	* map_slippy.test: Morian <mmoria01@users.sourceforge.net>
+	* pkgIndex.tcl: for the report. Bumped version to 0.3. Started a
+	  testsuite.
+
 2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
